--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Adder App</title>
 </head>
 <body>
-    <h1>Adder</h1>
+    <h1>Add two numbers</h1>
     <input type="number" id="a" placeholder="Enter first number">
     <input type="number" id="b" placeholder="Enter second number">
     <button onclick="addNumbers()">Add</button>
